--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"bits-ui": "^0.21.7",
 		"clsx": "^2.1.1",
 		"formsnap": "^1.0.0",
+		"lucide-svelte": "^0.378.0",
 		"pocketbase": "^0.21.2",
 		"sveltekit-superforms": "^2.12.6",
 		"tailwind-merge": "^2.3.0",
