--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"formsnap": "^1.0.0",
 		"lucide-svelte": "^0.378.0",
 		"pocketbase": "^0.21.2",
+		"svelte-sonner": "^0.3.22",
 		"sveltekit-superforms": "^2.12.6",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
